--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>заголовок</h1>
+<h1>Hello, user!</h1>
 </body>
 </html>
